AM_CPPFLAGS = -std=c++11 -Wno-write-strings -Wno-pointer-arith
bin_PROGRAMS=pfrd
pfrd_SOURCES= \
	pfrd.cpp \
	pfr_dst.cpp \
	pfr_dst_list.cpp \
	pfr_peers.cpp \
	pfr_sql.cpp \
	pfr_sql_list.cpp \
	pfr_rdata.cpp \
	pfr_rtr.cpp \
	error.cpp \
	ping_calloc.cpp \
	ping_data.cpp \
	ping_host_serv.cpp \
	ping_in_cksum.cpp \
	ping_inet_ntop.cpp \
	ping_inet_pton_ipv4.cpp \
	ping_m.cpp \
	ping_proc_v4.cpp \
	ping_readloop.cpp \
	ping_send_v4.cpp \
	ping_sig_alrm.cpp \
	ping_signal.cpp \
	ping_sock_ntop_host.cpp \
	ping_wrapsock.cpp \
	ping_wrapunix.cpp \
	tv_sub.cpp
