AM_CPPFLAGS = -std=c++11 -Wno-write-strings -Wno-pointer-arith -Wno-error=deprecated-declarations
bin_PROGRAMS=pfrd
pfrd_SOURCES= \
	pfrd.cpp \
	pfr_dst.cpp \
	pfr_dst_list.cpp \
	pfr_peers.cpp \
	pfr_sql.cpp \
	pfr_sql_list.cpp \
	pfr_rdata.cpp \
	pfr_rtr.cpp \
	pfr_lib.cpp \
	pfr_localnets.cpp \
	pfr_sql_log.cpp \
	pfr_customer.cpp \
	pfr_telemetry.cpp \
	grpc/pfr_gobgp_grpc.cpp \
	grpc/gobgp.pb.cc \
	grpc/gobgp.grpc.pb.cc \
	grpc/capability.pb.cc \
	grpc/capability.grpc.pb.cc \
	grpc/attribute.pb.cc \
	grpc/attribute.grpc.pb.cc \
	error.cpp \
	ping_calloc.cpp \
	ping_data.cpp \
	ping_host_serv.cpp \
	ping_in_cksum.cpp \
	ping_inet_ntop.cpp \
	ping_inet_pton_ipv4.cpp \
	ping_m.cpp \
	ping_proc_v4.cpp \
	ping_readloop.cpp \
	ping_send_v4.cpp \
	ping_sig_alrm.cpp \
	ping_signal.cpp \
	ping_sock_ntop_host.cpp \
	ping_wrapsock.cpp \
	ping_wrapunix.cpp \
	tv_sub.cpp
